--- a/ContactForm.html
+++ b/ContactForm.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Form</title>
-    <link rel="stylesheet" href="css/site.css" />
-    
+    <title>PageTitle</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/css/site.css" />
   </head>
+
   <body>
     <div class="container mt-5">
-      <h1 class="text-center text-white">Contact Me</h1>
+      <h1 class="text-center text-light">Contact Form</h1>
       <div class="border border-2 border-info shadow-lg p-2 bg-light">
-        <!--Name-->
-        <form class="contactForm" action="#">
+        <form action="#">
+          <!--Name-->
           <div class="row mb-1">
             <div class="col">
               <label class="form-label">First Name</label>
@@ -75,9 +86,7 @@
               />
             </div>
           </div>
-
           <!--Message-->
-
           <div class="row mb-1">
             <div class="col">
               <label class="form-label">Message</label>
@@ -91,10 +100,17 @@
               ></textarea>
             </div>
           </div>
-
+          <!--Button-->
           <button type="submit" class="btn btn-primary mt-2">Submit</button>
         </form>
       </div>
     </div>
+
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
